syntax = "proto3";

import "protip/extensions.proto";

package protip.messages;

message EnumValue {
  int32 value = 1;
}